Fix attribution text being too large in some environments

--- a/assets/css/ButterflyMap.css
+++ b/assets/css/ButterflyMap.css
@@ -8,6 +8,7 @@
     padding: 0;
 }
 
-.mapboxgl-ctrl.mapboxgl-ctrl-attrib.mapboxgl-compact.mapboxgl-compact-show{
+.mapboxgl-ctrl.mapboxgl-ctrl-attrib.mapboxgl-compact.mapboxgl-compact-show, .mapboxgl-ctrl-attrib-inner a {
     font-size: 1rem;
+    font-weight: normal;
 }
